# votenet

./: .gitignore  README.md  demo.py  pixi.toml  plot.py  pyproject.toml  setup.py
pointnet2/: setup.py
pointnet2/_ext_src/src/: group_points.cpp  interpolate.cpp
votenet/models/: __init__.py  ap_helper.py  backbone_module.py  boxnet.py  dump_helper.py  loss_helper.py  loss_helper_boxnet.py  proposal_module.py  votenet_model.py
votenet/pointnet2/: pointnet2_modules.py  pointnet2_test.py  pointnet2_utils.py
votenet/pointnet2/_ext_src/include/: utils.h
votenet/pointnet2/_ext_src/src/: ball_query.cpp  sampling.cpp
votenet/scannet/: data_viz.py  model_util_scannet.py  scannet_detection_dataset.py
votenet/sunrgbd/: model_util_sunrgbd.py  sunrgbd_data.py  sunrgbd_detection_dataset.py
votenet/utils/: __init__.py  eval_det.py  metric_util.py  nms.py  pc_util.py  tf_visualizer.py
