[project]
name = "votenet"
requires-python = ">=3.9, <3.11"
authors = [
    {name = "Logan Lang", email = "logan.lang@xtechlab.ykkap.com"},
]
description = ""
readme = {file = "README.md", content-type = "text/markdown"}  # Ensure this matches the file used
keywords = []
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/YKK-xTechLab-Engineering/votenet"
Issues = "https://github.com/YKK-xTechLab-Engineering/votenet/issues"
Changelog = "https://github.com/YKK-xTechLab-Engineering/votenet/CHANGELOG.md"

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
local_scheme="no-local-version"
version_file = "votenet/_version.py"

[tool.setuptools]
packages = { find = { where = ["."], include = ["votenet*"] } }
include-package-data = true


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
matplotlib = '*'
plyfile = '*'
trimesh= '*'
networkx= '*'
scipy = "*"
pyvista = '*'

[tool.pixi.pypi-dependencies]
votenet = { path = ".", editable = true }
opencv-python = '*'

[tool.pixi.pypi-options]
no-build-isolation = ["votenet"]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.0"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.6.*"
pytorch-gpu = "2.7.*"
cuda-toolkit = "12.*"
gxx = "*"

# [feature.gpu.pypi-dependencies]
# pointnet2 = { path = "pointnet2/", editable = true }



[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.feature.test.dependencies]
pytest="*"

[tool.pixi.environments]
cpu = ["cpu"]
default = ["gpu"]

# pointnet2 = {features = ["pointnet2"], solve-group = "gpu"}
test = {features = ["test"], solve-group = "gpu"}